[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5"
regex = "1"
chrono = "0.4"
robotparser = "0.11"
openssl = "0.10"
openssl-sys = "0.9.102"